# Project name
project(MySensors_${DEVICE_NAME})

# CMake version
cmake_minimum_required(VERSION 2.6)

message("Including ${PROJECT_NAME} for arch : ${ARDUINO_ARCH}")

file(GLOB_RECURSE SRC_FILES_CPP ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE SRC_FILES_C   ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

add_library(${PROJECT_NAME} ${SRC_FILES_C} ${SRC_FILES_CPP})

target_include_directories(
	${PROJECT_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	)
target_link_libraries(${PROJECT_NAME} Arduino_${DEVICE_NAME})
target_link_libraries(${PROJECT_NAME} Arduino_SPI_${DEVICE_NAME})
target_link_libraries(${PROJECT_NAME} Arduino_EEPROM_${DEVICE_NAME})

